--- a/style.css
+++ b/style.css
@@ -23,10 +23,15 @@
 }
 
 .articles{
+   padding-top: 20px;
     padding-left: 10px;
     display: flex;
     width:100%;
     align-items: center;
+}
+
+.card-group{
+    padding-top: 20px;
 }
 
 h2{
@@ -35,8 +40,16 @@ h2{
     align-items: center; 
     justify-content: center;
 }
+h3{
+    padding: 10px;
+
+}
 p{
     padding:10px
+}
+iframe{
+    margin-top: 20px;
+    margin-left: 100px;
 }
 
 @media(max-width:750px){
@@ -56,6 +69,10 @@ p{
     }
     iframe{
         width:100%;
+        padding: 0;
+        margin: 0;
     }
-
+    .carousel{
+        height:200px;
+    }
 }
